Prevent home page content shifting

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -23,6 +23,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      min-width: 300px;
+      min-height: 300px;
 
       .profile-picture {
         width: 80%;
